Revert "Added new content to portfolio cards. Issue of alignments and adding drug page still under progress."
This reverts commit 6d11b97269fd2dce40c3e776b1d89170d1ed28d0.

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -30,7 +30,6 @@ body {
   --main-body: #e9e9ee;
   --headerfooter: #ccc9dc;
   --bars:#F4F4F4;
-  --light-color: #EDEDED;
 
 
 
@@ -57,7 +56,6 @@ body {
   --headerfooter: #0C1821;
   --bars:#0C1821;
   --feature-bg: #EDEDED;
-  --light-color: #EDEDED;
 
 }
 
